2011-05-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the query to get the number of unknown
	  agents. Thanks to Koichiro.

2011-05-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Added support for event alerts (Enterprise).

2011-05-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Applied Koichiro's patch to reuse an
	  already running snmptrapd.

	* lib/PandoraFMS/DataServer.pm: Do not update the configuration of
	  policy modules.

2011-05-23  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_db.pl
	util/pandora_manage.pl: Added minor functions and fixes to policy queue
	and call to clean policy queue in maintenance script

2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added check of the returning of add 
	operation to queue

2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to give the address of
	one agent

2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Change apply policy option in CLI to
	add application to queue

2011-05-11  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	bin/pandora_server
	util/pandora_manage.pl: Added thread in main loop of the 
	server with check to the policy queue. 
	Apply and delete agents from policy in the new thread
	Deleting policies lock system from server 

2011-05-09  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Moved some functions from CLI to common
	files

2011-05-07 Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Ported changes from 3.2 on Recon.
	Full topology recursive discovery and resolution, os_type conditional.

2011-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_agents.php: changed the SQL query for PostgreSQL.
	