@@ -1,3 +1,8 @@
+2011-06-02  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DataServer.pm: Do not include BADXML files when
+	  evaluating max_queue_files.
+
 2011-05-30  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Fixed the query to get the number of unknown
